--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -3,7 +3,7 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             android:layout_height="match_parent" android:background="@drawable/fondo">
 
     <TextView
             android:text="@string/titulo"
@@ -17,7 +17,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
-            android:id="@+id/textView3" android:layout_marginTop="30dp"
+            android:id="@+id/textView3" android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/textView2" android:textStyle="bold"
             android:textColor="@android:color/white" android:textSize="18sp"/>
     <TextView
@@ -25,7 +25,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
-            android:id="@+id/textView4" android:layout_marginTop="30dp"
+            android:id="@+id/textView4" android:layout_marginTop="26dp"
             app:layout_constraintTop_toBottomOf="@+id/textView3" android:textSize="18sp" android:textStyle="bold"
             android:textColor="@android:color/white"/>
     <TextView
@@ -33,7 +33,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="12dp" android:layout_marginTop="30dp"
+            android:layout_marginStart="12dp" android:layout_marginTop="28dp"
             app:layout_constraintTop_toBottomOf="@+id/textView4" android:textSize="18sp" android:textStyle="bold"
             android:textColor="@android:color/white"/>
     <EditText
@@ -44,29 +44,21 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="16dp" android:id="@+id/txtTitulo" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView2"
-            android:layout_marginStart="8dp" android:hint="@string/introduzca_el_titulo" android:textColor="?attr/colorAccent"
+            android:layout_marginStart="8dp" android:hint="@string/introduzca_el_titulo"
+            android:textColor="?attr/colorAccent"
             android:importantForAutofill="no" tools:targetApi="o"/>
     <EditText
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/txtGenero" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtTitulo" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView3"
-            android:layout_marginStart="8dp" android:hint="@string/introduzca_el_genero" android:textColor="?attr/colorAccent"
-            android:importantForAutofill="no" tools:targetApi="o"/>
-    <EditText
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/txtDuracion" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtGenero" android:layout_marginEnd="8dp"
+            android:id="@+id/txtDuracion"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView4"
             android:layout_marginStart="8dp" android:hint="@string/introduzca_el_precio"
-            android:textColor="?attr/colorAccent" app:layout_constraintHorizontal_bias="0.6"
-            android:importantForAutofill="no" tools:targetApi="o"/>
+            android:textColor="?attr/colorAccent"
+            android:importantForAutofill="no" tools:targetApi="o" android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtGenero"/>
     <EditText
             android:layout_width="250dp"
             android:layout_height="wrap_content"
@@ -105,4 +97,13 @@
             android:textStyle="bold" android:textColor="?android:attr/colorBackground"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
             android:layout_marginTop="96dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
+    <Spinner
+            android:layout_width="250dp"
+            android:layout_height="35dp"
+            android:id="@+id/txtGenero"
+            app:layout_constraintTop_toBottomOf="@+id/txtTitulo" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textView3"
+            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
+            android:textSize="18sp"
+            android:textColor="#ffbb33"/>
 </android.support.constraint.ConstraintLayout>
